# saudicar-ai-mlops

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-mlops.txt  requirements.txt
docs/: BOOTCAMP_PLAN.md  DATASET.md  DAY_01_SETUP.md  EDA_SUMMARY.md
html teachs/: feature_engineering.html  styles.css
src/saudi_car_ai/: __init__.py
src/saudi_car_ai/api/: __init__.py
src/saudi_car_ai/data/: __init__.py  eda.py
src/saudi_car_ai/features/: __init__.py
src/saudi_car_ai/models/: __init__.py
src/saudi_car_ai/monitoring/: __init__.py
tests/: test_environment.py
